[package]
name = "pyyni"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyyni"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.18", features = ["extension-module"]}
libyni = {path = "../libyni"}